--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   duckdb-stable-build:
     name: Build extension binaries
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.0.0
+    uses: samansmink/extension-ci-tools/.github/workflows/_extension_distribution.yml@add-rust-toolchain
     with:
       duckdb_version: v1.0.0
       extension_name: prql
@@ -30,5 +30,4 @@ jobs:
       duckdb_version: v1.0.0
       extension_name: prql
       deploy_latest: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
-      enable_rust: true
       exclude_archs: 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_rtools'
